virt01/manual/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-ui
  labels:
    app: ha
spec:
  ports:
    - port: 8123
      protocol: TCP
      name: ha-ui-port
  selector:
    app: ha
