virt01/manual/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ingress
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: ha.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: ha-ui
            port:
              number: 8123
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ha.k3s.nf.lab
    secretName: ha-cert-tls
